--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     header,
     footer {
-      background-color: navy;
+      background-color: rgb(65, 150, 133);
       color: white;
       text-align: center;
       padding: 10px;
@@ -46,6 +46,17 @@
     td {
       padding: 8px 0;
     }
+
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    li {
+      display: inline;
+      margin: 1cap;
+    }
   </style>
 </head>
 
@@ -58,9 +69,9 @@
     <nav>
       <ul>
         <li><a href="#Video">Video</a></li>
-        <li><a href="news.asp">News</a></li>
-        <li><a href="contact.asp">Contact</a></li>
-        <li><a href="about.asp">About</a></li>
+        <li><a href="#Audio">Audio</a></li>
+        <li><a href="#Youtube">Youtube</a></li>
+        <li><a href="#Comments">Comments</a></li>
       </ul>
     </nav>
   </header>
@@ -85,13 +96,13 @@
       </audio>
     </div>
 
-    <div id="iframe">
+    <div id="Youtube">
       <h3>Iframe: Video YouTube</h3>
       <iframe src="https://www.youtube.com/embed/13ARO0HDZsQ" frameborder="0" allowfullscreen></iframe>
 
     </div>
 
-    <div id="Komentar">
+    <div id="Comments">
       <h2>Tinggalkan Komentar</h2>
       <form action="#" method="post">
         <label for="name">Nama:</label>
